Release notes for xmlBlaster @version@ (http://www.xmlBlaster.org)

Changes for 0.xxx [xxxxxxxxxx]
==============================
 o Moved to JacORB 2.0 beta 2 + (cvs) from 2003-09-14 15:00
   You can check out this version with:
    cvs -d :pserver:anonymous@www.jacorb.org/cvsroot/jacorb checkout -D '2003-09-14 15:00' JacORB
   idl.jar is patched to contain JacORB/lib/logkit.jar

 o Updated XPathFilter to support Jaxen XPath extension functions, also added the functions RecursiveTextFunction and ContainsIgnoreCaseFunction.

 o Updated j2ee components to the latest API changes. Also fixed property handling so that xmlBlaster.properties is not loaded by default. xmlBlaster.properties and xmlBlasterPlugins.xml is removed from the xmlBlaster.jar to not upset the propertyloading.

 o Changed ClassLoaderFactory to be interface based, now pluggable with property classLoaderFactory. Moved implementing ClassLoaderFactory to StandaloneClassLoaderFactory and added a ContextClassLoaderFactory to be used in certain embedded environments.

 o Bugfix in Timeout.java
   - userData is now correctly passed
   - addOrRefreshTimeoutListener() acts now correctly on all situations
   Reported by Xavier Roques, xRoques@infovista.com

 o Ported chess demo to batik 1.5, cleanup of event queue

 o Moved getJdbcQueueManagerCommonTable from util.Global to JdbcQueueCommonTablePlugin so that the 
   manager is not referenced outside the plugin it serves. Moved also wipeOutDB from Global to the
   queue plugin).

 o Property loading cleanup in Global.java 
   Thanks to Peter Antman for the discussion

 o Fixed build.xml 'dist' task to include HSQLDB

 o Bugfix in persistence layer for huge messages.
   Reported by pikaiyuan

 o The jmxgui now uses only one XmlBlasterAccess to communicate with xmlBlaster

 o fix in JdbcQueueManager to avoid batch mode invocations if the DB does not 
   support this feature (particularly for hsqldb)

 o The SVG Javascript chess example is updated to this