@@ -4,15 +4,16 @@ import org.xmlBlaster.util.Global;
 import org.xmlBlaster.util.Timestamp;
 import org.xmlBlaster.util.SessionName;
 import org.xmlBlaster.util.queue.StorageId;
-import org.xmlBlaster.util.enum.MethodName;
 import org.xmlBlaster.util.enum.PriorityEnum;
 
 /**
  */
 public class DummyEntry extends MsgQueueEntry {
 
+   public static final String ME = "DummyEntry";
    public static final String ENTRY_TYPE = "DUMMY";
    private long sizeOfMsg = 0;
+   private byte[] content;
 
    /**
     * This constructor is for internal creation from persistence only (passing the original timestamp). 
@@ -25,6 +26,17 @@ public class DummyEntry extends MsgQueueEntry {
    public DummyEntry(Global glob, PriorityEnum priority, Timestamp timestamp, StorageId storageId, long sizeOfMsg, boolean persistent) {
       super(glob, ENTRY_TYPE, priority, timestamp, storageId, persistent);
       this.sizeOfMsg = sizeOfMsg;
+      if (this.sizeOfMsg != 0) {
+         if (this.sizeOfMsg >= Integer.MAX_VALUE)
+            this.log.warn(ME, "the size of the content has been reduced because it did not fit inside a byte[]");
+         this.content = new byte[(int)this.sizeOfMsg];
+      }
+   }
+
+   public DummyEntry(Global glob, PriorityEnum priority, Timestamp timestamp, StorageId storageId, byte[] content, boolean persistent) {
+      super(glob, ENTRY_TYPE, priority, timestamp, storageId, persistent);
+      this.content = content;
+      if (this.content != null) this.sizeOfMsg = (long)this.content.length;
    }
 
    public DummyEntry(Global glob, PriorityEnum priority, StorageId storageId, boolean persistent) {
@@ -35,6 +47,11 @@ public class DummyEntry extends MsgQueueEntry {
    public DummyEntry(Global glob, PriorityEnum priority, StorageId storageId, long sizeOfMsg, boolean persistent) {
       super(glob, ENTRY_TYPE, priority, storageId, persistent);
       this.sizeOfMsg = sizeOfMsg;
+      if (this.sizeOfMsg != 0) {
+         if (this.sizeOfMsg >= Integer.MAX_VALUE)
+            this.log.warn(ME, "the size of the content has been reduced because it did not fit inside a byte[]");
+         this.content = new byte[(int)this.sizeOfMsg];
+      }
    }
 
    /**
@@ -50,7 +67,7 @@ public class DummyEntry extends MsgQueueEntry {
    }
 */
    public Object getEmbeddedObject() {
-      return null;
+      return new Object[] {this.content};
    }
 
    public final boolean isExpired() {
